--- a/myskills.html
+++ b/myskills.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="format-detection" content="telephone=no">
-	<title>John Markowitz</title>
+	<title>Chaitanya Jadhav</title>
 	<link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="css/all.css" />
 	<link rel="stylesheet" href="css/screen.css" />
@@ -83,13 +83,11 @@
 		<footer id="footer">
 			<div class="footer-content">
 				<ul class="social">
-					<li class="email"><a href="#">Email</a></li>
-					<li class="facebook"><a href="#">Facebook</a></li>
-					<li class="google"><a href="#">Google+</a></li>
-					<li class="twitter"><a href="#">Twitter</a></li>
-					<li class="pinterest"><a href="#">Pinterest</a></li>
+					<li class="email"><a href="cjadhav7477@gmail.com">Email</a></li>
+					<li class="facebook"><a href="https://www.facebook.com/chaitanya.jadhav.965">Facebook</a></li>
+					<li class="twitter"><a href="https://twitter.com/chaitanyaj621">Twitter</a></li>
 				</ul>
-				<p class="copy">Copyright 2014 John Markowitz. All rights reserved.</p>
+				<p class="copy">Copyright 2018 Chaitanya Jadhav. All rights reserved.</p>
 			</div>
 		</footer>	
 	</div>
