[ref]: corrected the portfolio.html and contact.html spelling mistakes.

--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="myskills.html">My skills</a></li>
-							<li><a href="Portfolio.html">Portfolio</a></li>
-							<li><a class="active" href="Contact.html">Contact</a></li>
+							<li><a href="portfolio.html">Portfolio</a></li>
+							<li><a class="active" href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
 			</header>
@@ -45,7 +45,7 @@
 		<footer id="footer">
 			<div class="footer-content">
 				<ul class="social">
-					<li class="email"><a href="cjadhav7477@gmail.com">Email</a></li>
+					<li class="email"><a href="mailto:cjadhav7477@gmail.com">Email</a></li>
 					<li class="facebook"><a href="https://www.facebook.com/chaitanya.jadhav.965">Facebook</a></li>
 					<li class="twitter"><a href="https://twitter.com/chaitanyaj621">Twitter</a></li>
 				</ul>
